# GemmaCompiler

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: static.yml
docs/: Doxyfile.in  mainpage.md
examples/: 100_NOPs.txt  basic_instructions.txt
include/: instructions.hpp  result.hpp  wasm.hpp
include/assembler/: assembler.hpp  errors.hpp  instruction_builders.hpp  instructions_set.hpp  lexer.hpp  parser.hpp  scanner.hpp  token.hpp
include/assembler/formatters/: human_hex_formatter.hpp  instruction_formatter.hpp
include/assembler/instructions/: definitions.hpp  halt.hpp  instructions_set.hpp  nop.hpp
include/instructions/: flag.hpp  instruction.hpp  opcodes.hpp
src/: instructions.cpp  main.cpp  wasm.cpp
src/assembler/: assembler.cpp  instruction_builders.cpp  lexer.cpp  parser.cpp
tests/: scanner.cpp
tests/assembler/: assembler.cpp  lexer.cpp
web/: index.html  script.js  style.css  wasm.js  wasm.wasm
